// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RateComponent should create 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should create disabled 1`] = `
<rc-rate
  class="rc-disabled"
>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should create with 3 filled stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should create with 3 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should create with 5 filled stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="rc-selected ng-trigger ng-trigger-zoom"
    style=""
  >
     star_rate

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should create with 5 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should deselect 1 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom ng-animating"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should deselect 4 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom ng-animating"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom ng-animating"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom ng-animating"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom ng-animating"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should not select when disabled 1`] = `
<rc-rate
  class="rc-disabled"
>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should select 1 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom rc-selected ng-animating"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;

exports[`RateComponent should select 4 stars 1`] = `
<rc-rate>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom rc-selected ng-animating"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom rc-selected ng-animating"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom rc-selected ng-animating"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom rc-selected ng-animating"
    style=""
  >
     star_rate

  </rc-material-icon>
  <rc-material-icon
    class="ng-trigger ng-trigger-zoom"
    style=""
  >
     star_border

  </rc-material-icon>
  
</rc-rate>
`;
